--- a/sdk/OoyalaSkinSDK/android/app/src/main/res/layout/list_activity_list_item.xml
+++ b/sdk/OoyalaSkinSDK/android/app/src/main/res/layout/list_activity_list_item.xml
@@ -4,5 +4,5 @@
     android:layout_height="fill_parent"
     android:padding="10dp"
     android:textSize="16sp"
-    android:textColor="#FFF" >
+    android:textColor="#000000" >
 </TextView>
