--- a/sdk/android/app/src/main/res/menu/menu_main.xml
+++ b/sdk/android/app/src/main/res/menu/menu_main.xml
@@ -3,6 +3,5 @@
       tools:context=".MainActivity">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
-          android:orderInCategory="100"
-          android:showAsAction="never"/>
+          android:orderInCategory="100"/>
 </menu>
